--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
----
-layout: home
-title: Jay's Notes
-subtitle: Welcome, it's good to see you.
----
+<html>
+    <head>
+        <link rel="stylesheet" href="tufte.css"/>
+    </head>
+<body>
+    <p>Writings by Jay Butera</p><ul><li><a href="./posts/blockchain-analogies.html">blockchain-analogies</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">searching-for-better-knowledge-representations</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">why-have-functors-when-we-have-fold</a></li></ul>
+</body>
+</html>
