--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="tufte.css"/>
     </head>
 <body>
-    <p>Writings by Jay Butera</p><ul><li><a href="./posts/blockchain-analogies.html">blockchain-analogies</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">searching-for-better-knowledge-representations</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">why-have-functors-when-we-have-fold</a></li></ul>
+    <p>Writings by Jay Butera</p><ul><li><a href="./posts/blockchain-analogies.html">blockchain-analogies</a></li><li><a href="./posts/ends-in-capitalism.html">ends-in-capitalism</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">searching-for-better-knowledge-representations</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">why-have-functors-when-we-have-fold</a></li></ul>
 </body>
 </html>
