--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
     <head>
         <link rel="stylesheet" href="tufte.css"/>
     </head>
+    <style>
+        #body {
+            margin-top: 10%;
+        }
+    </style>
 <body>
-    <ul><li><a href="./posts/ends-in-capitalism.html">2021-08-21 Ends In Capitalism</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">2021-07-27 Why have functors when we have fold?</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">2021-07-11 Searching For Better Knowledge Representations</a></li><li><a href="./posts/blockchain-analogies.html">2021-04-30 Blockchain Analogies</a></li></ul><h3>Writings by Jay Butera</h3>
+    <div id="body">
+        <ul><li><a href="./posts/ends-in-capitalism.html">2021-08-21 Ends In Capitalism</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">2021-07-27 Why have functors when we have fold?</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">2021-07-11 Searching For Better Knowledge Representations</a></li><li><a href="./posts/blockchain-analogies.html">2021-04-30 Blockchain Analogies</a></li></ul><h3>Writings by Jay Butera</h3>
+    </div>
 </body>
 </html>
