--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <html>
     <head>
-        <link rel="stylesheet" href="tufte.css"/>
+        <!--<link rel="stylesheet" href="tufte.css"/>-->
+        <link rel="stylesheet" href="styles.css"/>
     </head>
-    <style>
-        #body {
-            margin-top: 10%;
-        }
-    </style>
 <body>
     <div id="body">
-        <ul><li><a href="./posts/rich-statefulness-with-utxos.html">2021-09-12 Rich Statefulness With UTXOs</a></li><li><a href="./posts/ends-in-capitalism.html">2021-08-21 Ends In Capitalism</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">2021-07-27 Why have functors when we have fold?</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">2021-07-11 Searching For Better Knowledge Representations</a></li><li><a href="./posts/blockchain-analogies.html">2021-04-30 Blockchain Analogies</a></li></ul><h3>Writings by Jay Butera</h3>
+        <ul><li><a href="./posts/rich-statefulness-with-utxos.html">2021-09-12 Rich Statefulness With UTXOs</a></li><li><a href="./posts/ends-in-capitalism.html">2021-08-21 Ends In Capitalism</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">2021-07-27 Why have functors when we have fold?</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">2021-07-11 Searching For Better Knowledge Representations</a></li><li><a href="./posts/blockchain-analogies.html">2021-04-30 Blockchain Analogies</a></li></ul>
     </div>
 </body>
 </html>
