--- a/template.html
+++ b/template.html
@@ -1,12 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="tufte.css"/>
+        <!--<link rel="stylesheet" href="tufte.css"/>-->
+        <link rel="stylesheet" href="styles.css"/>
     </head>
-    <style>
-        #body {
-            margin-top: 10%;
-        }
-    </style>
 <body>
     <div id="body">
         ◊(->html doc #:splice? #t)
