--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     </head>
 <body>
     <div id="body">
-        <ul><li><a
-                    href="./posts/market-failure-among-crypto-capitalists.html">[2021-09-26]
-                    Market Failure Among Crypto Capitalists</a></li><li><a
-        href="./posts/rich-statefulness-with-utxos.html">[2021-09-12] Rich
-        Statefulness With UTXOs</a></li><li><a
-                                                href="./posts/trust-is-the-core-value-proposition-of-a-blockchain.html">[2021-09-30] Trust is the Core Value Proposition of a Blockchain</a></li><li><a href="./posts/ends-in-capitalism.html">[2021-08-21] Ends In Capitalism</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">[2021-07-27] Why have functors when we have fold?</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">[2021-07-11] Searching For Better Knowledge Representations</a></li><li><a href="./posts/blockchain-analogies.html">[2021-04-30] Blockchain Analogies</a></li></ul>
+        <ul><li><a href="./posts/trust-is-the-core-value-proposition-of-a-blockchain.html">[2021-09-30] Trust is the Core Value Proposition of a Blockchain</a></li><li><a href="./posts/market-failure-among-crypto-capitalists.html">[2021-09-26] Market Failure Among Crypto Capitalists</a></li><li><a href="./posts/rich-statefulness-with-utxos.html">[2021-09-12] Rich Statefulness With UTXOs</a></li><li><a href="./posts/ends-in-capitalism.html">[2021-08-21] Ends In Capitalism</a></li><li><a href="./posts/why-have-functors-when-we-have-fold.html">[2021-07-27] Why have functors when we have fold?</a></li><li><a href="./posts/searching-for-better-knowledge-representations.html">[2021-07-11] Searching For Better Knowledge Representations</a></li><li><a href="./posts/blockchain-analogies.html">[2021-04-30] Blockchain Analogies</a></li></ul>
     </div>
 </body>
 </html>
